Added more translation Polish.properties

--- a/android/assets/jsons/translationsByLanguage/Polish.properties
+++ b/android/assets/jsons/translationsByLanguage/Polish.properties
@@ -240,7 +240,7 @@ You declared war on us! = Wypowiedziałeś z nami wojnę!
 Your warmongering ways are unacceptable to us. = Wasze podżeganie jest dla nas nie do przyjęcia.
 You have captured our cities! = Przejąłeś nasze miasta!
  # Requires translation!
-We applaud your liberation of our conquered cities! = 
+We applaud your liberation of our conquered cities! = Cieszymy się, że uwolniłeś nasze podbite miasta!
 Years of peace have strengthened our relations. = Lata pokoju wzmocniły nasze relacje.
 Our mutual military struggle brings us closer together. = Nasza wspólna walka zbliża nas do siebie.
 We have signed a public declaration of friendship = Podpisaliśmy deklarację o przyjaźni
@@ -261,7 +261,7 @@ You refused to stop settling cities near us = Odmówiłeś prośby aby nie osied
 We noticed your new city near our borders, despite your promise. This will have....implications. = Mimo obietnicy zauważyliśmy twoje nowe miasto w pobliżu naszych granic. Poniesiesz za to konsekwencje
 Your arrogant demands are in bad taste = Twoje aroganckie żądania są w złym guście
  # Requires translation!
-Your use of nuclear weapons is disgusting! = 
+Your use of nuclear weapons is disgusting! = Twoje użycie broni nuklearnej jest godne potępienia!
 Cultured = Wykształcony
 Maritime = Nadmorski
 Mercantile = Handlowy
@@ -295,7 +295,7 @@ Declarations of war = Deklaracja wojny
 Introduction to [nation] = Przedstawienie narodu [nation]
 Declare war on [nation] = Wypowiedz wojnę z [nation]
  # Requires translation!
-Luxury resources = 
+Luxury resources = Surowce luksusowe
 Strategic resources = Zasoby strategiczne
 replaces = zastępuje
 [resourceName] not required = [resourceName] nie jest wymagane/ny
@@ -363,7 +363,7 @@ Ramkhamhaeng = Ramkhamhaeng
 Food and Culture from Friendly City-States are increased by 50% = Zasoby Pożywienia i Kultura od Przyjaznych Miast-Państw są ziwiększone o 50%
 Songhai = Songhaj
  # Requires translation!
-Askia = 
+Askia = Askia
 Receive triple Gold from Barbarian encampments and pillaging Cities. Embarked units can defend themselves. = Odtrymaj potrojone Złoto od Barbażyńskich obozowisk i plądrowanych Miast. Zaokrętowane jednostki mogą same się bronić
 
 # New game screen
@@ -375,16 +375,16 @@ Load copied data = Wczytaj skopiowane dane
 Could not load game from clipboard! = Nie można wczytać danych ze schowka!
 Start game! = Zacznij grę:
  # Requires translation!
-Map options = 
+Map options = Opcje mapy
  # Requires translation!
-Game options = 
+Game options = Opcje gry
 Map type = Rodzaj mapy
  # Requires translation!
-Generated = 
+Generated = Wygenerowane
  # Requires translation!
-Existing = 
+Existing = Istniejące
  # Requires translation!
-Map generation type = 
+Map generation type = Typ generowania mapy
 Number of city-states = Liczba miast-państw
 One City Challenge = Wyzwanie z limitem 1 miasta
 No barbarians = Brak barbarzyńców
@@ -450,7 +450,7 @@ Load [saveFileName] = Wczytaj [saveFileName]
 Delete save = Usuń zapis
 Saved at = Zapisz jako
  # Requires translation!
-Load map = 
+Load map = Wczytaj mapę
 Are you sure you want to delete this map? = Czy na pewno chcesz usunąc tą mapę?
 Upload map = Prześlij mapę
 Could not upload map! = Nie udało się przesłać mapy
@@ -479,7 +479,7 @@ Show minimap = Pokaż minimapę
 Show pixel units = Pokaż jednostki jako pixele
 Show pixel improvements = Pokaż ulepszenia jako pixele
  # Requires translation!
-Enable nuclear weapons = 
+Enable nuclear weapons = Zezwól na używanie broni nuklearnych
 Fontset = Zestaw czcionek
 
 # Notifications
@@ -499,7 +499,7 @@ Work has started on [construction] = Rozpoczęto prace nad budową [construction
 [cityName] cannot continue work on [construction] = Miasto [cityName] nie może dalej pracować nad [construction]
 [cityname] has expanded its borders! = Granice miasta [cityname] poszerzyły się!
  # Requires translation!
-Your Golden Age has ended. = 
+Your Golden Age has ended. = Twoja Złota Era dobiegła końca
 [cityName] has been razed to the ground! = Miasto [cityName] zostało zrównane z ziemią!
 We have conquered the city of [cityname]! = Napotkaliśmy miasto [cityname]!
 An enemy [unit] has attacked [cityname] = Wrogie jednostki [unit] ruszyły na [cityname]
@@ -553,201 +553,201 @@ We have lost alliance with [nation]. = Nie jesteśmy już w sojuszu z [nation].
 # World Screen UI
 
  # Requires translation!
-Working... = 
+Working... = W toku
  # Requires translation!
-Waiting for other players... = 
+Waiting for other players... = Oczekiwanie na innych graczy...
  # Requires translation!
-in = 
+in = w
  # Requires translation!
-Next turn = 
+Next turn = Następna tura 
  # Requires translation!
-Turn = 
+Turn = Tura
  # Requires translation!
-turns = 
+turns = Tury
  # Requires translation!
-turn = 
+turn = tura
  # Requires translation!
-Next unit = 
+Next unit = Następna jednostka 
  # Requires translation!
-Pick a policy = 
+Pick a policy = Wybierz politykę
  # Requires translation!
-Movement = 
+Movement = Ruch
  # Requires translation!
-Strength = 
+Strength = Siła
  # Requires translation!
-Ranged strength = 
+Ranged strength = Siła rażenia 
  # Requires translation!
-Bombard strength = 
+Bombard strength = Siła bombardowania
  # Requires translation!
-Range = 
+Range = Zasięg
  # Requires translation!
-Move unit = 
+Move unit = Rusz jednostkę
  # Requires translation!
-Stop movement = 
+Stop movement = Zatrzymaj ruch
  # Requires translation!
-Construct improvement = 
+Construct improvement = Skonstruuj ulepszenie
  # Requires translation!
-Automate = 
+Automate = Zautomatyzuj
  # Requires translation!
-Stop automation = 
+Stop automation = Wyłącz automatyzację
 Construct road = Zbuduj drogę
  # Requires translation!
-Fortify = 
+Fortify = Fortyfikuj
  # Requires translation!
-Fortification = 
+Fortification = Fortyfikacja
  # Requires translation!
-Sleep = 
+Sleep = Uśpij
  # Requires translation!
-Moving = 
+Moving = W ruchu
  # Requires translation!
-Set up = 
+Set up = Rozłóż
  # Requires translation!
-Upgrade to [unitType] ([goldCost] gold) = 
+Upgrade to [unitType] ([goldCost] gold) = Ulepsz do [unitType] ([goldCost] złota) 
  # Requires translation!
-Found city = 
+Found city = Załóż miasto
  # Requires translation!
-Promote = 
+Promote = Awansuj
  # Requires translation!
-Health = 
+Health = Zdrowie
  # Requires translation!
-Disband unit = 
+Disband unit = Rozwiąż jednostkę
  # Requires translation!
-Explore = 
+Explore = Eksploruj
  # Requires translation!
-Stop exploration = 
+Stop exploration = Zatrzymaj eksplorację
  # Requires translation!
-Pillage = 
+Pillage = Złup
  # Requires translation!
-Do you really want to disband this unit? = 
+Do you really want to disband this unit? = Na pewno chcesz rozwiązać tę jednostkę?
  # Requires translation!
-Disband this unit for [goldAmount] gold? = 
+Disband this unit for [goldAmount] gold? = Rozwiązać tę jednostkę za [goldAmount] złota?
  # Requires translation!
-Create [improvement] = 
+Create [improvement] = Zbuduj [improvement]
  # Requires translation!
-Start Golden Age = 
+Start Golden Age = Rozpocznij Złotą Erę
  # Requires translation!
-Yes = 
+Yes = Tak
  # Requires translation!
-No = 
+No = Nie
  # Requires translation!
-Acquire = 
+Acquire = Zdobądź 
  # Requires translation!
-Gold = 
+Gold = Złoto
  # Requires translation!
-Science = 
+Science = Nauka
  # Requires translation!
-Happiness = 
+Happiness = Zadowolenie
  # Requires translation!
-Production = 
+Production = Produkcja 
  # Requires translation!
-Culture = 
+Culture = Kultura
  # Requires translation!
-Food = 
+Food = Jedzenie
  # Requires translation!
-GOLDEN AGE = 
+GOLDEN AGE = ZŁOTA ERA
  # Requires translation!
-Golden Age = 
+Golden Age = Złota Era
  # Requires translation!
-[year] BC = 
+[year] BC = [year] p.n.e.
  # Requires translation!
-[year] AD = 
+[year] AD = [year] n.e.
  # Requires translation!
-Civilopedia = 
+Civilopedia = Civilopedia
  # Requires translation!
-Start new game = 
+Start new game = Rozpocznij nową grę
  # Requires translation!
-Save game = 
+Save game = Zapisz grę
  # Requires translation!
-Load game = 
+Load game = Wczytaj grę
  # Requires translation!
-Victory status = 
+Victory status = Status zwycięstwa
  # Requires translation!
-Social policies = 
+Social policies = Polityki socjalne
  # Requires translation!
-Community = 
+Community = Społeczność
  # Requires translation!
-Close = 
+Close = Zamknij
 
 # City screen
 
  # Requires translation!
-Exit city = 
+Exit city = Wyjdź z widoku miasta
  # Requires translation!
-Raze city = 
+Raze city = Zrównaj z ziemią
  # Requires translation!
-Stop razing city = 
+Stop razing city = Zaprzestań zrównywania z ziemią
  # Requires translation!
-Buy for [amount] gold = 
+Buy for [amount] gold = Kup za [amount] złota
  # Requires translation!
-Buy = 
+Buy = Kup 
  # Requires translation!
-Would you like to purchase [constructionName] for [buildingGoldCost] gold? = 
+Would you like to purchase [constructionName] for [buildingGoldCost] gold? = Czy chcesz kupić [constructionName] za [buildingGoldCost] złota?
  # Requires translation!
-Maintenance cost = 
+Maintenance cost = Koszt utrzymania
  # Requires translation!
-Pick construction = 
+Pick construction = Wybierz budowlę
  # Requires translation!
-Pick improvement = 
+Pick improvement = Wybierz ulepszenie
  # Requires translation!
-Provides [resource] = 
+Provides [resource] = Zapewnia [resource]
  # Requires translation!
-Replaces [improvement] = 
+Replaces [improvement] = Zastępuje [improvement]
  # Requires translation!
-Pick now! = 
+Pick now! = Wybierz teraz!
  # Requires translation!
-Build [building] = 
+Build [building] = Zbuduj [building]
  # Requires translation!
-Train [unit] = 
+Train [unit] = Zwerbuj [unit]
  # Requires translation!
-Produce [thingToProduce] = 
+Produce [thingToProduce] = Wyprodukuj [thingToProduce]
  # Requires translation!
-Nothing = 
+Nothing = Nic
  # Requires translation!
-Annex city = 
+Annex city = Zaanektuj miasto
  # Requires translation!
-Specialist Buildings = 
+Specialist Buildings = Budynki Specjalistów
  # Requires translation!
-Specialist Allocation = 
+Specialist Allocation = Przydział Specjalistów
  # Requires translation!
-Specialists = 
+Specialists = Specjaliści
  # Requires translation!
-Food eaten = 
+Food eaten = Zużywane jedzenie
  # Requires translation!
-Growth bonus = 
+Growth bonus = Bonus do przyrostu
  # Requires translation!
-Unassigned population = 
+Unassigned population = Nieprzydzielona populacja
  # Requires translation!
-[turnsToExpansion] turns to expansion = 
+[turnsToExpansion] turns to expansion = [turnsToExpansion] tur do ekspansji
  # Requires translation!
-Stopped expansion = 
+Stopped expansion = Zatrzymano ekspansję
  # Requires translation!
-[turnsToPopulation] turns to new population = 
+[turnsToPopulation] turns to new population = [turnsToPopulation] tur do nowej populacji 
  # Requires translation!
-Food converts to production = 
+Food converts to production = Jedzenie zamienia się w produkcję
  # Requires translation!
-[turnsToStarvation] turns to lose population = 
+[turnsToStarvation] turns to lose population = [turnsToStarvation] tur do stracenia populacji
  # Requires translation!
-Stopped population growth = 
+Stopped population growth = Zatrzymano wzrost populacji
  # Requires translation!
-In resistance for another [numberOfTurns] turns = 
+In resistance for another [numberOfTurns] turns = Stawiające opór jeszcze przez [numberOfTurns]
  # Requires translation!
-Sell for [sellAmount] gold = 
+Sell for [sellAmount] gold = Sprzedaj za [sellAmount] złota
  # Requires translation!
-Are you sure you want to sell this [building]? = 
+Are you sure you want to sell this [building]? = Jesteś pewien sprzedania [building]
  # Requires translation!
-[greatPerson] points = 
+[greatPerson] points = [greatPerson] punktów
  # Requires translation!
-Great person points = 
+Great person points = Punkty Wielkiej Osobistości
  # Requires translation!
-Current points = 
+Current points = Obecne punkty
  # Requires translation!
-Points per turn = 
+Points per turn = Punktów na turę
  # Requires translation!
-Convert production to gold at a rate of 4 to 1 = 
+Convert production to gold at a rate of 4 to 1 = Zamień produkcję na złoto, jak 4 do 1 
  # Requires translation!
-Convert production to science at a rate of 4 to 1 = 
+Convert production to science at a rate of 4 to 1 = Zamień produkcję na naukę, jak 4 do 1
  # Requires translation!
-The city will not produce anything. = 
+The city will not produce anything. = Miasto nie będzie produkować niczego.
 
 # Technology UI
 
