--- a/android/assets/jsons/translationsByLanguage/German.properties
+++ b/android/assets/jsons/translationsByLanguage/German.properties
@@ -5,29 +5,29 @@ Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup =
 
 Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = Eine Stadt gründen!\nWähle den Siedler (Flaggensymbol) > Klicke auf 'Stadt gründen' (unten links). 
 
-Enter the city screen!\nClick the city button twice = Öffne den Stadtbildschirm!\n Klicke zweimal den Stadt- Knopf.
+Enter the city screen!\nClick the city button twice = Öffne den Stadtbildschirm!\n Klicke zweimal den Stadtknopf.
 
 Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = Wähle eine Technologie zum Erforschen!\nKlicke auf den Tech-Button (grünlich, oben links) > \n wähle Technologie > klicke auf 'Forschung' (unten rechts). 
 
 Pick a construction!\nEnter city screen > Click on a unit or building (left side) = Wähle eine Konstruktion!\nÖffne den Stadtbildschirm > Klicke auf eine Einheit oder ein Gebäude (linke Seite) 
 
-Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Beende eine Runde!\ngehe durch die Einheiten mit 'Nächste Einheit' > Klicke auf 'Nächste Runde'.
+Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = Beende eine Runde!\nGehe durch die Einheiten mit 'Nächste Einheit' > Klicke auf 'Nächste Runde'.
 
-Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Weise bearbeitete Kacheln neu zu!\nÖffne den Stadtbildschirm > klicke auf die zugewiesene (grüne) Kachel, um sie zu entfernen > \n klicken Sie auf eine nicht zugewiesene Kachel, um die Bevölkerungszahl zuzuweisen.
+Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = Weise bearbeitete Felder neu zu!\nÖffne den Stadtbildschirm > klicke auf das zugewiesene (grüne) Feld, um es zu entfernen > \n klicke auf ein nicht zugewiesenes Feld, um die Bevölkerungszahl zuzuweisen.
 
 Meet another civilization!\nExplore the map until you encounter another civilization! = Triff eine andere Zivilisation!\n Erkunde die Karte, bis du einer anderen Zivilisation begegnest! 
- # Requires translation!
-Open the options table!\nClick the menu button (top left) > click 'Options' = 
- # Requires translation!
-Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Choose 'Create improvement' > Choose the farm > \n Leave the worker there until it's finished = 
- # Requires translation!
-Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = 
- # Requires translation!
-Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit = 
- # Requires translation!
-Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = 
- # Requires translation!
-See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = 
+
+Open the options table!\nClick the menu button (top left) > click 'Options' = Öffne die Optionen!\nKlicke auf die Menütaste (oben links) > klicke auf 'Optionen'. 
+
+Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Choose 'Create improvement' > Choose the farm > \n Leave the worker there until it's finished = Baue eine Verbesserung!\nBaue eine Arbeitereinheit > Bewege sie auf eine Ebene oder ein Grünland feld > \n Wähle 'Verbesserung bauen' > Wähle 'Farm' > \n Lasse den Arbeiter dort, bis er fertig ist.
+
+Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = Erstelle eine Handelsroute!\n Baue Straßen zwischen deiner Hauptstadt und einer anderen Stadt.\nOder automatisiere deinen Arbeiter und lasse sie schließlich dazu kommen.
+
+Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit = Erobere eine Stadt!\nBringe eine feindliche Stadt auf wenig leben > \nBetrete die Stadt mit einer Nahkampfeinheit.
+
+Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = Bewege eine Lufteinheit!\nWähle eine Lufteinheit > Wähle eine andere Stadt in Reichweite > \nVerschiebe die Einheit zu der anderen Stadt.
+
+See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = Schaue deine Statistiken an!\nGehe in den Übersichtsbildschirm (obere rechte Ecke) >\nKlicke auf 'Statistiken'. 
 
 # Buildings
 
