--- a/android/assets/jsons/translationsByLanguage/Traditional_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Traditional_Chinese.properties
@@ -1,35 +1,21 @@
 
 # Tutorial tasks
 
- # Requires translation!
-Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup = 移動你的人民!\點擊一個單位 > 點擊其目的地 > 點擊確認箭頭前進
- # Requires translation!
+Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup = 移動你的人民!\n點擊一個單位 > 點擊其目的地 > 點擊確認箭頭前進
 Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = 建立你的首都!\n選取移民(旗子圖樣單位) > 點擊"建立首都"(螢幕左下角)
- # Requires translation!
 Enter the city screen!\nClick the city button twice = 進入城市介面!\n點擊城市兩下
- # Requires translation!
-Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = 
-選一個科技開始研究!\n點擊科技按鈕(左上方,綠色按鈕) > \n選擇一個科技 > 點擊"開始研究" (右下角) 
- # Requires translation!
+Pick a technology to research!\nClick on the tech button (greenish, top left) > \n select technology > click 'Research' (bottom right) = 選一個科技開始研究!\n點擊科技按鈕(左上方,綠色按鈕) > \n選擇一個科技 > 點擊"開始研究" (右下角) 
 Pick a construction!\nEnter city screen > Click on a unit or building (left side) = 選一個設施開始建造!\n進入城市介面 > 點擊一個單位或建築 (畫面左邊)
- # Requires translation!
 Pass a turn!\nCycle through units with 'Next unit' > Click 'Next turn' = 跳過一回合!\n用"下一個單位"來循環你的單位 > 點擊"下一回合"
- # Requires translation!
-Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = 
-重新分配勞動人口!\n進入城市介面 > 點擊已被分配勞力的領域已取消分配 > \n 接著點擊未被分配勞力的領域已分配勞動人口
- # Requires translation!
+Reassign worked tiles!\nEnter city screen > click the assigned (green) tile to unassign > \n click an unassigned tile to assign population = 重新分配勞動人口!\n進入城市介面 > 點擊已被分配勞力的領域已取消分配 > \n 接著點擊未被分配勞力的領域已分配勞動人口
 Meet another civilization!\nExplore the map until you encounter another civilization! = 認識其他文明!\n探險地圖直到你遇見令一個文明!
- # Requires translation!
 Open the options table!\nClick the menu button (top left) > click 'Options' = 打開選項列表!\n點擊主畫面(左上角按鈕) > 典籍"選項"
  # Requires translation!
 Construct an improvement!\nConstruct a Worker unit > Move to a Plains or Grassland tile > \n Choose 'Create improvement' > Choose the farm > \n Leave the worker there until it's finished = 
  # Requires translation!
 Create a trade route!\nConstruct roads between your capital and another city\nOr, automate your worker and let him get to that eventually = 
- # Requires translation!
 Conquer a city!\nBring an enemy city down to low health > \nEnter the city with a melee unit = 佔領一座城市!\n攻擊敵方城市直到血量為零 > \n用近戰單位進入城市
- # Requires translation!
 Move an air unit!\nSelect an air unit > select another city withing range > \nMove the unit to the other city = 移動你的空中單位!\n選取一個空中單位 > 選取一個範圍內的城市 > \n將單位移至此城市
- # Requires translation!
 See your stats breakdown!\nEnter the Overview screen (top right corner) >\nClick on 'Stats' = 看看你的數據分析!\n進入蓋覽介面(右上角按鈕) > \n點擊"遊戲數據"
 
 # Buildings
