--- a/android/assets/jsons/translationsByLanguage/German.properties
+++ b/android/assets/jsons/translationsByLanguage/German.properties
@@ -1130,6 +1130,29 @@ Ocean = Ozean
 Flood plains = Flussaue
 Impassible = Unpassierbar
 
+# Natural Wonders
+
+ # Requires translation!
+Barringer Crater = 
+ # Requires translation!
+Grand Mesa = 
+ # Requires translation!
+Great Barrier Reef = 
+ # Requires translation!
+Krakatoa = 
+ # Requires translation!
+Mount Fuji = 
+ # Requires translation!
+Old Faithful = 
+ # Requires translation!
+Rock of Gibraltar = 
+ # Requires translation!
+Cerro de Potosi = 
+ # Requires translation!
+El Dorado = 
+ # Requires translation!
+Fountain of Youth = 
+
 # Resources
 
 Cattle = Rinder
@@ -1431,3 +1454,5 @@ Ambush I = Lufthinterhalt I
 Ambush II = Lufthinterhalt II
 Haka War Dance = Haka Kriegstanz
 -10% combat strength for adjacent enemy units = -10% Kampfstärke für angrenzende feindliche Einheiten
+ # Requires translation!
+Rejuvenation = 
