--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -1115,6 +1115,19 @@ Ocean = Oceano
 Flood plains = Pianure allagate
 Impassible = Inaccessibile
 
+# Natural Wonders
+
+Barringer Crater = Cratere di Barringer
+Grand Mesa = Grand Mesa
+Great Barrier Reef = Grande barriera corallina
+Krakatoa = Krakatoa
+Mount Fuji = Monte Fuji
+Old Faithful = Old Faithful
+Rock of Gibraltar = Rocca di Gibilterra
+Cerro de Potosi = Cerro Rico
+El Dorado = El Dorado
+Fountain of Youth = Fonte della giovinezza
+
 # Resources
 
 Cattle = Bestiame
@@ -1415,3 +1428,4 @@ Ambush I = Imboscata aerea I
 Ambush II = Imboscata aerea II
 Haka War Dance = Danza di guerra Haka
 -10% combat strength for adjacent enemy units = -10% Forza alle unità nemiche adiacenti a questa unità
+Rejuvenation = Ringiovanimento
