--- a/android/assets/jsons/translationsByLanguage/Korean.properties
+++ b/android/assets/jsons/translationsByLanguage/Korean.properties
@@ -1138,6 +1138,29 @@ Ocean = 대양
 Flood plains = 범람원
 Impassible = 지나갈 수 없음
 
+# Natural Wonders
+
+ # Requires translation!
+Barringer Crater = 
+ # Requires translation!
+Grand Mesa = 
+ # Requires translation!
+Great Barrier Reef = 
+ # Requires translation!
+Krakatoa = 
+ # Requires translation!
+Mount Fuji = 
+ # Requires translation!
+Old Faithful = 
+ # Requires translation!
+Rock of Gibraltar = 
+ # Requires translation!
+Cerro de Potosi = 
+ # Requires translation!
+El Dorado = 
+ # Requires translation!
+Fountain of Youth = 
+
 # Resources
 
 Cattle = 소
@@ -1439,3 +1462,5 @@ Ambush I = 공중 매복 I
 Ambush II = 공중 매복 II
 Haka War Dance = 하카 전쟁 의식
 -10% combat strength for adjacent enemy units = 이 유닛과 인접한 적 유닛의 전투력 -10%
+ # Requires translation!
+Rejuvenation = 
