--- a/android/assets/jsons/translationsByLanguage/Portuguese.properties
+++ b/android/assets/jsons/translationsByLanguage/Portuguese.properties
@@ -1387,6 +1387,29 @@ Ocean = Oceano
 Flood plains = Planícies alagadas
 Impassible = Inacessível
 
+# Natural Wonders
+
+ # Requires translation!
+Barringer Crater = 
+ # Requires translation!
+Grand Mesa = 
+ # Requires translation!
+Great Barrier Reef = 
+ # Requires translation!
+Krakatoa = 
+ # Requires translation!
+Mount Fuji = 
+ # Requires translation!
+Old Faithful = 
+ # Requires translation!
+Rock of Gibraltar = 
+ # Requires translation!
+Cerro de Potosi = 
+ # Requires translation!
+El Dorado = 
+ # Requires translation!
+Fountain of Youth = 
+
 # Resources
 
 Cattle = Gado
@@ -1689,3 +1712,5 @@ Ambush I = Emboscada Aérea I
 Ambush II = Emboscada Aérea II
 Haka War Dance = Dança de Guerra Haka
 -10% combat strength for adjacent enemy units = -10% de força de combate para cada unidade inimiga adjacente
+ # Requires translation!
+Rejuvenation = 
