--- a/android/assets/jsons/translationsByLanguage/Dutch.properties
+++ b/android/assets/jsons/translationsByLanguage/Dutch.properties
@@ -1935,6 +1935,29 @@ Flood plains = Riviervlakte
  # Requires translation!
 Impassible = 
 
+# Natural Wonders
+
+ # Requires translation!
+Barringer Crater = 
+ # Requires translation!
+Grand Mesa = 
+ # Requires translation!
+Great Barrier Reef = 
+ # Requires translation!
+Krakatoa = 
+ # Requires translation!
+Mount Fuji = 
+ # Requires translation!
+Old Faithful = 
+ # Requires translation!
+Rock of Gibraltar = 
+ # Requires translation!
+Cerro de Potosi = 
+ # Requires translation!
+El Dorado = 
+ # Requires translation!
+Fountain of Youth = 
+
 # Resources
 
 Cattle = Rundvee
@@ -2461,3 +2484,5 @@ Ambush II =
 Haka War Dance = 
  # Requires translation!
 -10% combat strength for adjacent enemy units = 
+ # Requires translation!
+Rejuvenation = 
