--- a/android/assets/jsons/translationsByLanguage/Romanian.properties
+++ b/android/assets/jsons/translationsByLanguage/Romanian.properties
@@ -1643,6 +1643,29 @@ Ocean = Ocean
 Flood plains = Câmpii inundate
 Impassible = Inaccesibil
 
+# Natural Wonders
+
+ # Requires translation!
+Barringer Crater = 
+ # Requires translation!
+Grand Mesa = 
+ # Requires translation!
+Great Barrier Reef = 
+ # Requires translation!
+Krakatoa = 
+ # Requires translation!
+Mount Fuji = 
+ # Requires translation!
+Old Faithful = 
+ # Requires translation!
+Rock of Gibraltar = 
+ # Requires translation!
+Cerro de Potosi = 
+ # Requires translation!
+El Dorado = 
+ # Requires translation!
+Fountain of Youth = 
+
 # Resources
 
 Cattle = Vite
@@ -2082,3 +2105,5 @@ Ambush II =
 Haka War Dance = 
  # Requires translation!
 -10% combat strength for adjacent enemy units = 
+ # Requires translation!
+Rejuvenation = 
