--- a/android/assets/jsons/translationsByLanguage/Spanish.properties
+++ b/android/assets/jsons/translationsByLanguage/Spanish.properties
@@ -1642,6 +1642,29 @@ Ocean = Océano
 Flood plains = Terreno inundable
 Impassible = Inpasable
 
+# Natural Wonders
+
+ # Requires translation!
+Barringer Crater = 
+ # Requires translation!
+Grand Mesa = 
+ # Requires translation!
+Great Barrier Reef = 
+ # Requires translation!
+Krakatoa = 
+ # Requires translation!
+Mount Fuji = 
+ # Requires translation!
+Old Faithful = 
+ # Requires translation!
+Rock of Gibraltar = 
+ # Requires translation!
+Cerro de Potosi = 
+ # Requires translation!
+El Dorado = 
+ # Requires translation!
+Fountain of Youth = 
+
 # Resources
 
 Cattle = Ganado
@@ -2080,3 +2103,5 @@ Ambush II =
 Haka War Dance = 
  # Requires translation!
 -10% combat strength for adjacent enemy units = 
+ # Requires translation!
+Rejuvenation = 
