--- a/android/assets/jsons/translationsByLanguage/Traditional_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Traditional_Chinese.properties
@@ -1126,6 +1126,29 @@ Ocean = 海洋
 Flood plains = 沖積平原
 Impassible = 不能通行
 
+# Natural Wonders
+
+ # Requires translation!
+Barringer Crater = 
+ # Requires translation!
+Grand Mesa = 
+ # Requires translation!
+Great Barrier Reef = 
+ # Requires translation!
+Krakatoa = 
+ # Requires translation!
+Mount Fuji = 
+ # Requires translation!
+Old Faithful = 
+ # Requires translation!
+Rock of Gibraltar = 
+ # Requires translation!
+Cerro de Potosi = 
+ # Requires translation!
+El Dorado = 
+ # Requires translation!
+Fountain of Youth = 
+
 # Resources
 
 Cattle = 牛群
@@ -1428,3 +1451,5 @@ Ambush I = 伏擊I級
 Ambush II = 伏擊II級
 Haka War Dance = 哈卡戰舞
 -10% combat strength for adjacent enemy units = 相鄰的敵方單位-10%戰鬥力
+ # Requires translation!
+Rejuvenation = 
